MonetDB/src/modules/plain/Tests/mmath.stable.out.CYGWIN
stdout of test 'mmath` in directory 'src/modules/plain` itself:


# 11:15:07 >  
# 11:15:07 >  Mtimeout -timeout 60 Mserver "--config=/home/sjoerd/src/devel/MonetDB/CYGWIN/conf/MonetDB.conf" --debug=10 --set "monet_mod_path=/home/sjoerd/src/devel/MonetDB/CYGWIN/src/modules/plain/.libs:/home/sjoerd/src/devel/MonetDB/CYGWIN/src/modules/contrib/.libs:/home/sjoerd/src/devel/MonetDB/CYGWIN/src/modules/calibrator/.libs:/home/sjoerd/src/devel/MonetDB/CYGWIN/src/mapi/.libs" --set "gdk_dbfarm=/home/sjoerd/src/devel/MonetDB/CYGWIN/dbfarm" --set "sql_logdir=/home/sjoerd/src/devel/MonetDB/CYGWIN/log" --set mapi_port=40333 --set sql_port=56900 --set monet_prompt= --trace --dbname=mTests_src_modules_plain  < mmath.milM
# 11:15:07 >  

# Monet Database Server V4.5.0
# Copyright (c) 1993-2004, CWI. All rights reserved.
# Compiled for i686-pc-cygwin/32bit; statically linked.
# Visit http://monetdb.cwi.nl/ for further information.
module("mmath");

setoid(oid(20000000));

# NOTE: If there would be a system with large enough doubles than
#       the expression could actually produce a correct output...
#       (unlikely with IEEE(like) floating point types though)
pow(2.0LL,5000.0LL).print();
[ Inf ]
isinf(pow(2.0LL,5000.0LL)).print();
[ 1 ]
pow(-2.0LL,5001.0LL).print();
[ -Inf ]
isinf(pow(-2.0LL,5001.0LL)).print();
[ -1 ]
	
finite(1.0LL).print();
[ true ]
finite(log(-1.0LL)).print();
!ERROR: Negative argument is not allowed
!ERROR: math_unary_LOG: operation failed.
!ERROR: interpret_params: finite(param 1): evaluation error.
!ERROR: interpret_params: print(param 1): evaluation error.
finite(pow(2.0LL,5000.0LL)).print();
[ false ]
finite(pow(-2.0LL,5001.0LL)).print();
[ false ]

quit();

# 11:15:08 >  
# 11:15:08 >  Done.
# 11:15:08 >  

